c2 - Fully unit-tested all the EXISTING utf8 functions, which are now in their own file. DO NOT USE BSList OR byteorder.h -- THEY ARE LIKLEY BROKEN.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,12 @@
 # Source makefile
 
 LIBNAME = libbase.a
-CC = clang++
+CC   = clang
+CCPP = clang++
 CFLAGS = -Wall -Wno-unused-label
 HEADERS_DIR = ../headers/
 
-LIBFILES = bstring.o bslist.o
+LIBFILES = utf8.o bstring.o bslist.o
 
 .PHONY: default all clean lib
 
@@ -13,7 +14,10 @@ default: $(LIBFILES)
 all: default
 
 %.o: %.cpp
-	$(CC) -isystem $(HEADERS_DIR) $(CFLAGS) -fPIC -c $< -o $@
+	$(CCPP) -isystem $(HEADERS_DIR) $(CFLAGS) -fPIC -c $< -o $@
+
+%.o: %.c
+	$(CC)   -isystem $(HEADERS_DIR) $(CFLAGS) -fPIC -c $< -o $@
 
 lib: $(LIBFILES)
 	ar -rcs $(LIBNAME) $(LIBFILES)
